src/objects/testInCountry1__InCountryRestApiEndpoint__mdt.object
<CustomObject>
    <fields>
        <fullName>testInCountry1__CertificateNameApi__c</fullName>
        <label>CertificateNameApi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__CertificateNameBatch__c</fullName>
        <label>CertificateNameBatch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__CertificateNameRest__c</fullName>
        <label>CertificateNameRest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__CertificateNameServerless__c</fullName>
        <label>CertificateNameServerless</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Country__c</fullName>
        <description>Object_relationship__c.Country__c field must have the same values</description>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>ax</fullName>
                    <label>Åland Islands</label>
                </value>
                <value>
                    <fullName>al</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>dz</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>as</fullName>
                    <label>American Samoa</label>
                </value>
                <value>
                    <fullName>ad</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>ao</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>ai</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>aq</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>ag</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>ar</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>am</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>aw</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>au</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>at</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>az</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>bs</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>bh</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>bd</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>bb</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>by</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>be</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>bz</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>bj</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>bm</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>bt</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>bo</fullName>
                    <label>Bolivia</label>
                </value>
                <value>
                    <fullName>bq</fullName>
                    <label>Bonaire, Sint Eustatius, Saba Saba</label>
                </value>
                <value>
                    <fullName>ba</fullName>
                    <label>Bosnia and Herzegovina ba</label>
                </value>
                <value>
                    <fullName>bw</fullName>
                    <label>Botswana</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testInCountry1__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__x_env_id__c</fullName>
        <label>x_env_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>InCountryRestApiEndpoint</label>
    <pluralLabel>InCountryRestApiEndpoints</pluralLabel>
</CustomObject>